--- a/sfq2.html
+++ b/sfq2.html
@@ -59,23 +59,23 @@
 	<div class="show">
 		<ul>
 			<li>
-				<a href=""><img src="images/1.jpg" alt=""></a>
+				<a href=""><img src="img/1.jpg" alt=""></a>
 				<div><a href="">Keep smile .frist</a></div>
 			</li>
 			<li>
-				<a href=""><img src="images/2.jpg" alt=""></a>
+				<a href=""><img src="img/2.jpg" alt=""></a>
 				<div><a href="">Keep smile .frist</a></div>
 			</li>
 			<li>
-				<a href=""><img src="images/3.jpg" alt=""></a>
+				<a href=""><img src="img/3.jpg" alt=""></a>
 				<div><a href="">Keep smile .frist</a></div>
 			</li>
 			<li>
-				<a href=""><img src="images/4.jpg" alt=""></a>
+				<a href=""><img src="img/4.jpg" alt=""></a>
 				<div><a href="">Keep smile .frist</a></div>
 			</li>
 			<li>
-				<a href=""><img src="images/5.jpg" alt=""></a>
+				<a href=""><img src="img/5.jpg" alt=""></a>
 				<div><a href="">Keep smile .frist</a></div>
 			</li>
 		</ul>
